--- a/puppet/hieradata/repos.d/firewall/10-repos.yaml
+++ b/puppet/hieradata/repos.d/firewall/10-repos.yaml
@@ -2,14 +2,9 @@
 # default configuration.
 
 repodeploy::repos:
-  '/opt/syseleven-base':
-    source: git@gitlab.syseleven.de:puppet-manifests/syseleven-base.git
+  '/opt/puppet-modules/vefirewall':
+    source: https://github.com/syseleven/puppet-vefirewall.git
     provider: git
-    include:
-      - modules/ssh
-      - modules/vefirewall
-      - modules/exim
-      - modules/sys11lib
   '/opt/puppet-modules/firewall':
     revision: 955024ee846a251686f70505c4502ac406cfe4d4
     source: git://github.com/puppetlabs/puppetlabs-firewall.git
