--- a/puppet/hieradata/repos.d/puppet-master/10-syseleven.yaml
+++ b/puppet/hieradata/repos.d/puppet-master/10-syseleven.yaml
@@ -2,5 +2,7 @@
 
 repodeploy::repos:
   '/opt/puppet-modules/sys11puppet':
-    source: git@gitlab.syseleven.de:openstack/puppet-sys11puppet.git
+    source:
+      origin: https://github.com/syseleven/puppet-sys11puppet.git
+      gitlab: git@gitlab.syseleven.de:openstack/puppet-sys11puppet.git
     provider: git
