--- a/puppet/hieradata/config.d/puppet-master/config.yaml
+++ b/puppet/hieradata/config.d/puppet-master/config.yaml
@@ -3,9 +3,8 @@
 sys11puppet::master::reports: 'store, http'
 sys11puppet::master::clientclean: false
 
-sys11puppet::master::modulepath:
-  - '/opt/puppet-modules'          # regular modules
-  - '/opt/puppet-modules-vcsrepo'  # sys11-base modules.
+# enable directory environments
+sys11puppet::master::environments: 'directory'
 
 # dashboard broken with ubuntu-14
 #  puppet-dashboard : Depends: ruby1.8 (>= 1.8.7) which is a virtual package.
