--- a/puppet/hieradata/global.yaml
+++ b/puppet/hieradata/global.yaml
@@ -4,7 +4,7 @@
 
 repodeploy::repos:
   '/opt/puppet-modules/apt':
-    revision: 43b894b12e53cb6943dfb936c5bdc700ee4997b2
+    revision: 1.8.0
     source: git://github.com/puppetlabs/puppetlabs-apt.git
     provider: git
   '/opt/puppet-modules/concat':
