--- a/puppet/hieradata/config.d/nginx-static/config.yaml
+++ b/puppet/hieradata/config.d/nginx-static/config.yaml
@@ -1,3 +1,3 @@
 nginx::nginx_vhosts:
   "%{::openstack_floating_ip}":
-     www_root: "/var/www/%{::openstack_floating_ip}"
+     www_root: "/usr/share/nginx/html/"
