--- a/puppet/hieradata/repos.d/base/10-repos.yaml
+++ b/puppet/hieradata/repos.d/base/10-repos.yaml
@@ -17,7 +17,5 @@ repodeploy::repos:
     source: git://github.com/saz/puppet-timezone.git
     provider: git
   '/opt/puppet-modules/base':
-    source: 
-      origin: https://github.com/syseleven/puppet-base.git
-      gitlab: git@gitlab.syseleven.de:openstack/puppet-base.git
+    source: https://github.com/syseleven/puppet-base.git
     provider: git
