--- a/puppet/hieradata/repos.d/sensu-client/10-repos.yaml
+++ b/puppet/hieradata/repos.d/sensu-client/10-repos.yaml
@@ -2,9 +2,7 @@
 
 repodeploy::repos:
   '/opt/puppet-modules/sys11sensu':
-    source:
-      origin: https://github.com/syseleven/puppet-sys11sensu.git
-      gitlab: git@gitlab.syseleven.de:openstack/puppet-sys11sensu.git
+    source: https://github.com/syseleven/puppet-sys11sensu.git
     provider: git
   '/opt/puppet-modules/sensu':
     revision: 1e961b90aadb9cd2e54d77d7443160bb96c61af2
