--- a/puppet/hieradata/repos.d/consul/10-repos.yaml
+++ b/puppet/hieradata/repos.d/consul/10-repos.yaml
@@ -5,4 +5,6 @@ repodeploy::repos:
     source: git@gitlab.syseleven.de:openstack/puppet-sys11consul.git
   '/opt/puppet-modules/consul':
     source: https://github.com/solarkennedy/puppet-consul.git
+  '/opt/puppet-modules/sys11monitoring':
+    source: git@gitlab.syseleven.de:openstack/puppet-sys11monitoring.git
 
