--- a/puppet/hieradata/repos.d/sensu-server/10-repos.yaml
+++ b/puppet/hieradata/repos.d/sensu-server/10-repos.yaml
@@ -1,6 +1,10 @@
 # Repositories to fetch puppet modules from.
 
 repodeploy::repos:
+  '/opt/syseleven-base':
+    source: git@gitlab.syseleven.de:puppet-manifests/syseleven-base.git
+    include:
+      - modules/exim
   '/opt/puppet-modules/sys11sensu':
     source: https://github.com/syseleven/puppet-sys11sensu.git
   '/opt/puppet-modules/sensu':
