os-909 Set sys11monitoring and trending type in global.yaml

--- a/puppet/hieradata/global.yaml
+++ b/puppet/hieradata/global.yaml
@@ -35,7 +35,9 @@ repodeploy::repos:
     source: git://github.com/puppetlabs/puppetlabs-vcsrepo.git
     provider: git
 
-
+# Set monitoring to sensu and trending to grafana for cloudstrap.
+sys11monitoring::type: 'sensu'
+sys11trending::type: 'grafana'
 # do apt-get update on a daily basis on puppet runs instead of just once
 # explicetly triggered
 apt::apt_update_frequency: 'daily'
