os-1096 Configured time zone in global.yaml (formerly hardwired in puppet-base).

--- a/puppet/hieradata/global.yaml
+++ b/puppet/hieradata/global.yaml
@@ -43,3 +43,6 @@ sys11trending::type: 'grafana'
 apt::apt_update_frequency: 'daily'
 # apt-get update may fail sometimes because of timeouts
 apt::update_tries: 3
+
+# Configure local time on instances
+timezone::timezone: 'Europe/Berlin'
